Add Bulma submodule, framework

--- a/docs/static/main.css
+++ b/docs/static/main.css
@@ -1,1 +1,1 @@
-div.home-banner{height:100vh}
+body{margin:0 auto;max-width:50rem;font-family:"Helvetica", "Arial", sans-serif;line-height:1.5;padding:4rem 1rem;color:#2E4352}h1,h2,strong{color:#0D1317}a{color:#232ED1;text-decoration:none}a:hover{color:#6564DB}.center{text-align:center}body.home{background-color:#F5F5FA}div.home-banner{height:100vh}div.home-banner p{font-family:Georgia, 'Times New Roman', Times, serif;font-size:20pt;text-transform:uppercase}div.home-banner p.author{font-size:35pt;color:#232ED1}
