--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="static/main.css">
 </head>
 
-<body>
+<body class="{% block body_class %}{% endblock %}">
   {% block body %}Oop! Nothing here...{% endblock %}
 </body>
 
