--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}BD103{% endblock %}
+{% block body_class %}home{% endblock %}
 
 {% block body %}
 <div class="home-banner">
-  <p>Music. Philosophy. Programming.</p>
-  <p>BD103</p>
+  <p>Music. Philosophy.</p>
+  <p>Programming.</p>
+  <hr class="line">
+  <p class="author center">BD103</a></p>
 </div>
-<p>Actualy Content</p>
 {% endblock %}
