--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,5 @@ Written by BD103
 @import "_palette.scss";
 @import "_base.scss";
 @import "_home.scss";
+@import "_repo.scss";
+@import "_helper.scss";
